Update logo URL for Hamilton Tiger-Cats

--- a/common/common.scss
+++ b/common/common.scss
@@ -205,7 +205,7 @@
 }
 
 .category-hamilton-tiger-cats .d-header #site-logo.logo-big {
-	content:url($wordmark-ham);
+	content:url($wordmark-ticats);
 }
 
 .category-toronto-argonauts .d-header {
