Change background color for Hamilton Tiger-Cats header

--- a/common/common.scss
+++ b/common/common.scss
@@ -191,9 +191,9 @@
 }
 
 .category-hamilton-tiger-cats .d-header {
-    background: rgba(#ffb416, 0.95);
+    background: rgba(#000000, 0.95);
     .extra-info-wrapper .topic-link {
-        color: #000000;
+        color: #444444;
     }
     .extra-info-wrapper .badge-wrapper.bullet span.badge-category  {
         color: #444444;
